Added icons and images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
-	<link rel="shortcut icon" href="images/favicon.jpg">
+	<link rel="shortcut icon" href="images/favicon1.jpg">
     
 	<!-- CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -168,7 +168,7 @@
 						<a class="slide_btn FromRight" href="javascript:void(0);" >Read More</a> -->
 						
 						<!-- VIDEO BACKGROUND -->
-						<a id="P2" class="player" data-property="{videoURL:'tDvBwPzJ7dY',containment:'.top_slider .slide3',autoPlay:true, mute:true, startAt:0, opacity:1}" ></a>
+						<a id="P2" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=kcx-kVzm5qo',containment:'.top_slider .slide3',autoPlay:true, mute:true, startAt:0, opacity:1}" ></a>
 						<!-- //VIDEO BACKGROUND -->
 					</li>
 				</ul>
@@ -357,7 +357,7 @@
 						</div> -->
 					</div>
 					<ul id="priestTab" class="nav nav-tabs">
-						<li class="active"><a class="i1" href="#priesttab1" data-toggle="tab" ><i></i><span>Priest Name & Address</span></a></li>
+						<li><a class="i1" href="#priesttab1" data-toggle="tab" ><i></i><span>Priest Name & Address</span></a></li>
 						<li><a class="i2" href="#priesttab2" data-toggle="tab" ><i></i><span>Get In Touch with Priest</span></a></li>
 						<li><a class="i3" href="#priesttab3" data-toggle="tab" ><i></i><span>Priest History</span></a></li>
 						<li><a class="i6" href="#priesttab4" data-toggle="tab" ><i></i><span>Book Your Solot</span></a></li>
